# Maze-Pathfinder

./: README.md  pyproject.toml  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  tests.yml
src/: algos.py  colour.py  hotkeys.py  main.py  play.py
src/algos/: __init__.py  a_star.py  algos.py  breadth_fs.py  depth_fs.py  dijkstras.py  greedy_best_fs.py  recursive_backtracker.py
src/states/: event_handler.py  hotkeys.py  instructions.py  instructions_handler.py  play.py  state.py
src/ui/: button.py  canvas.py  drop_down.py  navbar.py  node.py  text_object.py
tests/: conftest.py  test_algos.py  test_astar.py  test_breadth_FS.py  test_canvas.py  test_depth_FS.py  test_dijkstras.py  test_event_handler.py  test_greedy_best_FS.py  test_hotkeys.py  test_instructions.py  test_instructions_handler.py  test_play.py  test_recursive_backtracker.py
