[metadata]
name = Maze-PathFinder
description = Visualize maze generations and pathfinding algorithms in Pygame
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pygame~=2.0.3
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.950
    flake8>=3.9
    tox>=3.24

[options.package_data]
states, algos, ui = py.typed

[flake8]
max-line-length = 160